--- a/src/main/java/com/ProGeeks/ContactsManager/GUI/AddContact.form
+++ b/src/main/java/com/ProGeeks/ContactsManager/GUI/AddContact.form
@@ -28,7 +28,7 @@
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="saveingButton" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel3" alignment="0" max="32767" attributes="0"/>
@@ -37,25 +37,23 @@
                           <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="emailBar" alignment="0" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="mobileNumBar1" min="-2" pref="42" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="mobileNumBar" pref="152" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel1" min="-2" pref="123" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="emailBar" alignment="0" max="32767" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="mobileNumBar1" min="-2" pref="42" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="mobileNumBar" pref="152" max="32767" attributes="0"/>
+                              </Group>
+                              <Component id="lastnameBar" alignment="0" max="32767" attributes="0"/>
+                              <Component id="firstnameBar" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jobBar" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="lastnameBar" alignment="0" max="32767" attributes="0"/>
-                          <Component id="firstnameBar" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jobBar" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="83" max="32767" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="123" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -106,10 +104,10 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="18" style="3"/>
+          <Font name="Segoe UI" size="24" style="3"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Add Contact"/>
+        <Property name="text" type="java.lang.String" value=" Contact"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="saveingButton">
