--- a/src/main/java/com/ProGeeks/ContactsManager/GUI/ContactsList.form
+++ b/src/main/java/com/ProGeeks/ContactsManager/GUI/ContactsList.form
@@ -90,6 +90,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="ancestorAdded" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="jList1AncestorAdded"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -120,6 +123,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Update"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updatabuttonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
